Update G08 - Code.ipynb

--- a/G08 - Code.ipynb
+++ b/G08 - Code.ipynb
@@ -321,12 +321,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbd1c35-5f26-4dff-9a60-13e53f46f3a8",
+   "id": "2fed9977",
    "metadata": {},
    "source": [
     "<h3 style = \"color : #3D737D;\">Variable Analysis</h3>\n",
-    "<p style = \"font-size : 15px;\">Analysis of the skewness and outliers of the variables of <code>Project Data.xlsx</code> file without missing values.</p>"
+    "<p style = \"font-size : 15px;\">Analysis of the skewness and outliers of the variables of <code>Project Data.xlsx</code> file without missing values.</p>\n",
+    "<p style = \"font-size : 15px;\">Evaluation of the missing values and general context of the variables.</p>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cbd1c35-5f26-4dff-9a60-13e53f46f3a8",
+   "metadata": {},
+   "source": [
+    "<h4 style = \"color : #3D737D;\">Missing Values Evaluation</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b4da4d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
