Update G08 - Code.ipynb

--- a/G08 - Code.ipynb
+++ b/G08 - Code.ipynb
@@ -15,7 +15,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403964de-0db2-4de8-bb85-2f580ad50a5b",
+   "id": "dc07ba8a-59e6-47c7-95d2-adc0a79d5988",
+   "metadata": {},
+   "source": [
+    "<hr style = \"border: 3px solid #3D737D;\">\n",
+    "<h2  style = \"color : #3D737D;text-align : center;\"> Project Setup & Data Loading</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a5755b",
    "metadata": {},
    "source": [
     "<h3  style = \"color : #3D737D;\"> Imports</h3>"
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "b2273839-5343-4184-9508-c90442d47e42",
    "metadata": {},
    "outputs": [],
@@ -36,37 +45,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "d557f1c9",
+   "cell_type": "markdown",
+   "id": "71333b90",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.style.use('ggplot')"
+    "<h3  style = \"color : #3D737D;\"> Dataset Assessment</h3>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc07ba8a-59e6-47c7-95d2-adc0a79d5988",
+   "id": "6829d147",
    "metadata": {},
    "source": [
-    "<hr style = \"border: 3px solid #3D737D;\">\n",
-    "<h2  style = \"color : #3D737D;text-align : center;\"> Part A - Data Understanding & Cleaning</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b88a038-2bdf-408e-a332-36f47177e880",
-   "metadata": {},
-   "source": [
-    "<h3 style = \"color : #3D737D;\">Dataset Reading </h3>\n",
-    "<p style = \"font-size : 15px;\">Reading of dataset from <code>Project Data.xlsx</code> file</p>\n",
-    "<p>The dataset is in a <code>.xlsx</code> file, and uses <code>|</code> as a separator. The first row of the file is also blank, so we read it using <code>skiprows = 1</code>. </p>"
+    "<p style = \"font-size : 15px;\">Reading of dataset from <code>Project Data.xlsx</code> file</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "aad908e6-5697-4f8e-98b6-4fc9b476feea",
    "metadata": {},
    "outputs": [],
@@ -76,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "d5a751ff-2a35-4873-9f48-a04c5ca3d5ef",
    "metadata": {},
    "outputs": [
@@ -249,7 +245,7 @@
        "4          219.743794                 0.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,28 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "1600f7c9-976e-413d-b815-479726da667f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10008, 16)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "project_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "13bdb847-9907-4e18-9c3e-4e4824fc3467",
    "metadata": {},
    "outputs": [
@@ -320,13 +295,288 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1600f7c9-976e-413d-b815-479726da667f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10008, 16)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bb316d14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Patient ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Visit Date</th>\n",
+       "      <th>Consultation Duration</th>\n",
+       "      <th>Satisfaction Level</th>\n",
+       "      <th>Approximate Annual Income</th>\n",
+       "      <th>Consultation Price</th>\n",
+       "      <th>Insurance Coverage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10008.000000</td>\n",
+       "      <td>9952.000000</td>\n",
+       "      <td>10008</td>\n",
+       "      <td>10008.000000</td>\n",
+       "      <td>10008.000000</td>\n",
+       "      <td>9.854000e+03</td>\n",
+       "      <td>10008.000000</td>\n",
+       "      <td>9958.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1251.580735</td>\n",
+       "      <td>50.635651</td>\n",
+       "      <td>2024-03-31 14:53:14.244604160</td>\n",
+       "      <td>67.807654</td>\n",
+       "      <td>3.202338</td>\n",
+       "      <td>4.340276e+04</td>\n",
+       "      <td>187.263022</td>\n",
+       "      <td>115.429366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2024-01-01 00:00:00</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>50.036762</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1127.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>2024-02-15 00:00:00</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.115775e+04</td>\n",
+       "      <td>111.316562</td>\n",
+       "      <td>59.692518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1252.000000</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>2024-03-31 00:00:00</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.087650e+04</td>\n",
+       "      <td>159.531115</td>\n",
+       "      <td>115.938998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1375.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>2024-05-16 00:00:00</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.072175e+04</td>\n",
+       "      <td>199.820999</td>\n",
+       "      <td>165.437958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1499.000000</td>\n",
+       "      <td>195.000000</td>\n",
+       "      <td>2024-06-30 00:00:00</td>\n",
+       "      <td>600.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1.197090e+07</td>\n",
+       "      <td>39999.222018</td>\n",
+       "      <td>421.887836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>144.576421</td>\n",
+       "      <td>31.185608</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32.447143</td>\n",
+       "      <td>1.565507</td>\n",
+       "      <td>2.681420e+05</td>\n",
+       "      <td>862.865550</td>\n",
+       "      <td>79.337759</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Patient ID          Age                     Visit Date  \\\n",
+       "count  10008.000000  9952.000000                          10008   \n",
+       "mean    1251.580735    50.635651  2024-03-31 14:53:14.244604160   \n",
+       "min     1000.000000     0.000000            2024-01-01 00:00:00   \n",
+       "25%     1127.000000    23.000000            2024-02-15 00:00:00   \n",
+       "50%     1252.000000    52.000000            2024-03-31 00:00:00   \n",
+       "75%     1375.000000    75.000000            2024-05-16 00:00:00   \n",
+       "max     1499.000000   195.000000            2024-06-30 00:00:00   \n",
+       "std      144.576421    31.185608                            NaN   \n",
+       "\n",
+       "       Consultation Duration  Satisfaction Level  Approximate Annual Income  \\\n",
+       "count           10008.000000        10008.000000               9.854000e+03   \n",
+       "mean               67.807654            3.202338               4.340276e+04   \n",
+       "min                15.000000            1.000000               0.000000e+00   \n",
+       "25%                41.000000            2.000000               3.115775e+04   \n",
+       "50%                68.000000            3.000000               4.087650e+04   \n",
+       "75%                94.000000            5.000000               5.072175e+04   \n",
+       "max               600.000000            6.000000               1.197090e+07   \n",
+       "std                32.447143            1.565507               2.681420e+05   \n",
+       "\n",
+       "       Consultation Price  Insurance Coverage  \n",
+       "count        10008.000000         9958.000000  \n",
+       "mean           187.263022          115.429366  \n",
+       "min             50.036762            0.000000  \n",
+       "25%            111.316562           59.692518  \n",
+       "50%            159.531115          115.938998  \n",
+       "75%            199.820999          165.437958  \n",
+       "max          39999.222018          421.887836  \n",
+       "std            862.865550           79.337759  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5aa6078",
+   "metadata": {},
+   "source": [
+    "<hr style = \"border: 3px solid #3D737D;\">\n",
+    "<h2  style = \"color : #3D737D;text-align : center;\"> Part A - Data Understanding & Cleaning</h2>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2fed9977",
    "metadata": {},
    "source": [
-    "<h3 style = \"color : #3D737D;\">Variable Analysis</h3>\n",
-    "<p style = \"font-size : 15px;\">Analysis of the skewness and outliers of the variables of <code>Project Data.xlsx</code> file without missing values.</p>\n",
-    "<p style = \"font-size : 15px;\">Evaluation of the missing values and general context of the variables.</p>"
+    "<h3 style = \"color : #3D737D;\">Analysis and Correction of Inconsistencies</h3>\n",
+    "<p style = \"font-size : 15px;\">Evaluation of each row on the missing values and structure.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d6195cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols = project_data.select_dtypes(include=['object']).columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5b4da4d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "COLUMN: Gender\n",
+      "Unique values (3 unique):\n",
+      "['Female' 'Other' 'Male']\n",
+      "\n",
+      "COLUMN: City of Residence\n",
+      "Unique values (8 unique):\n",
+      "['Birmingham' 'Edinburgh' 'Glasgow' 'Dublin' 'Manchester' 'Liverpool'\n",
+      " 'Belfast' 'London']\n",
+      "\n",
+      "COLUMN: Profession\n",
+      "Unique values (10 unique):\n",
+      "['Retired' 'Lawyer' 'Doctor' 'Nurse' 'Student' 'Artist' 'Teacher'\n",
+      " 'Businessperson' 'Engineer' 'Scientist']\n",
+      "\n",
+      "COLUMN: Insurance Provider\n",
+      "Unique values (4 unique):\n",
+      "[nan 'Provider A' 'Provider B' 'Provider C' 'Provider D']\n",
+      "\n",
+      "COLUMN: Family History\n",
+      "Unique values (4 unique):\n",
+      "['Heart Disease' 'Diabetes' nan 'Hypertension' 'Cancer']\n",
+      "\n",
+      "COLUMN: Education Level\n",
+      "Unique values (8 unique):\n",
+      "['Master' 'Undergraduate' 'Kindergarten' 'Middle school/junior high'\n",
+      " 'High school' 'Pre-school' 'Elementary school' nan 'PhD']\n",
+      "\n",
+      "COLUMN: Marital Status\n",
+      "Unique values (4 unique):\n",
+      "['Divorced' 'Married' 'Single' 'Widowed']\n",
+      "\n",
+      "COLUMN: Department\n",
+      "Unique values (13 unique):\n",
+      "['Endocrinology' 'Emergency' 'Neurology' 'Orthopedics' 'Psychiatry'\n",
+      " 'Rheumatology' 'Allergology' 'ENT' 'General Practice' 'Cardiology'\n",
+      " 'Dermatology' 'Pulmonology' 'Gastroenterology']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in categorical_cols:\n",
+    "    print(f\"\\nCOLUMN: {col}\")\n",
+    "    print(f\"Unique values ({project_data[col].nunique()} unique):\")\n",
+    "    print(project_data[col].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52033ee2",
+   "metadata": {},
+   "source": [
+    "<p>As we can see, by the unique values of each variable defined as <code>Object</code>, we have no major inconsistencies and missing values are only categorised as <code>nan</code>."
    ]
   },
   {
@@ -339,32 +589,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b4da4d6",
+   "execution_count": 14,
+   "id": "ff51209f",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "d6195cca",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "COLUMN: Gender\n",
+      "0 missing values.\n",
+      "This represents 0.00% of the total values.\n",
+      "\n",
+      "COLUMN: City of Residence\n",
+      "0 missing values.\n",
+      "This represents 0.00% of the total values.\n",
+      "\n",
+      "COLUMN: Profession\n",
+      "0 missing values.\n",
+      "This represents 0.00% of the total values.\n",
+      "\n",
+      "COLUMN: Insurance Provider\n",
+      "1910 missing values.\n",
+      "This represents 19.08% of the total values.\n",
+      "\n",
+      "COLUMN: Family History\n",
+      "1993 missing values.\n",
+      "This represents 19.91% of the total values.\n",
+      "\n",
+      "COLUMN: Education Level\n",
+      "29 missing values.\n",
+      "This represents 0.29% of the total values.\n",
+      "\n",
+      "COLUMN: Marital Status\n",
+      "0 missing values.\n",
+      "This represents 0.00% of the total values.\n",
+      "\n",
+      "COLUMN: Department\n",
+      "0 missing values.\n",
+      "This represents 0.00% of the total values.\n"
+     ]
+    }
+   ],
    "source": [
-    "numerical_cols = [\n",
-    "    'Age', \n",
-    "    'Consultation Duration', \n",
-    "    'Satisfaction Level',\n",
-    "    'Approximate Annual Income', \n",
-    "    'Consultation Price', \n",
-    "    'Insurance Coverage'\n",
-    "]"
+    "for col in categorical_cols:\n",
+    "    print(f\"\\nCOLUMN: {col}\")\n",
+    "    print(f\"{project_data[col].isna().sum()} missing values.\")\n",
+    "    print(f'This represents {(project_data[col].isna().sum()/len(project_data[col]))*100:.2f}% of the total values.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "0cdc81c3",
    "metadata": {},
    "outputs": [],
@@ -383,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "9875ce32",
    "metadata": {},
    "outputs": [
@@ -404,7 +681,7 @@
        "Name: Approximate Annual Income, Length: 2288, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
