Update G08 - Code.ipynb

--- a/G08 - Code.ipynb
+++ b/G08 - Code.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 930,
+   "execution_count": 1076,
    "id": "b2273839-5343-4184-9508-c90442d47e42",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 931,
+   "execution_count": 1077,
    "id": "aad908e6-5697-4f8e-98b6-4fc9b476feea",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 932,
+   "execution_count": 1078,
    "id": "d5a751ff-2a35-4873-9f48-a04c5ca3d5ef",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "4          219.743794                 0.0  "
       ]
      },
-     "execution_count": 932,
+     "execution_count": 1078,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 933,
+   "execution_count": 1079,
    "id": "13bdb847-9907-4e18-9c3e-4e4824fc3467",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 934,
+   "execution_count": 1080,
    "id": "1600f7c9-976e-413d-b815-479726da667f",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "(10008, 16)"
       ]
      },
-     "execution_count": 934,
+     "execution_count": 1080,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 935,
+   "execution_count": 1081,
    "id": "bb316d14",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "std            862.865550           79.337759  "
       ]
      },
-     "execution_count": 935,
+     "execution_count": 1081,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 936,
+   "execution_count": 1082,
    "id": "bc42c1d7",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 937,
+   "execution_count": 1083,
    "id": "5b4da4d6",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 938,
+   "execution_count": 1084,
    "id": "d0fa23c5",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 939,
+   "execution_count": 1085,
    "id": "4a7e98f7",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "7      Marital Status                              2              False"
       ]
      },
-     "execution_count": 939,
+     "execution_count": 1085,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 940,
+   "execution_count": 1086,
    "id": "3d070cd0",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
        "array([2, 4, 5, 3, 1, 6], dtype=int64)"
       ]
      },
-     "execution_count": 940,
+     "execution_count": 1086,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 941,
+   "execution_count": 1087,
    "id": "50ab02a5",
    "metadata": {},
    "outputs": [],
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 942,
+   "execution_count": 1088,
    "id": "c06a5639",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
        "array([2, 4, 5, 3, 1], dtype=int64)"
       ]
      },
-     "execution_count": 942,
+     "execution_count": 1088,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 943,
+   "execution_count": 1089,
    "id": "70e78857",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 944,
+   "execution_count": 1090,
    "id": "ff51209f",
    "metadata": {},
    "outputs": [
@@ -986,19 +986,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 945,
+   "execution_count": 1091,
    "id": "8c57ae38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputation Report:\n",
+      " - Rows with both Provider and Coverage missing: 21\n",
+      " - Rows with Provider missing but Coverage known: 1839\n",
+      " - Rows with Provider known but Coverage missing: 29\n"
+     ]
+    }
+   ],
    "source": [
     "def cross_validate_insurance_imputation(df):\n",
     "    df_imputed = df.copy()\n",
     "    \n",
     "    provider_mode = df_imputed['Insurance Provider'].mode()[0]\n",
     "    \n",
+    "    print('Imputation Report:')\n",
+    "\n",
     "    # 1. SCENARIO: Provider is missing (NaN) AND Coverage is missing (NaN)\n",
     "    condition_1 = df_imputed['Insurance Provider'].isna() & df_imputed['Insurance Coverage'].isna()\n",
-    "    \n",
+    "    print(f\" - Rows with both Provider and Coverage missing: {condition_1.sum()}\")\n",
     "    # Impute 'None' for Provider\n",
     "    df_imputed.loc[condition_1, 'Insurance Provider'] = 'None'\n",
     "    # Impute 0 for Coverage\n",
@@ -1008,12 +1021,14 @@
     "    # 2. SCENARIO: Provider is missing (NaN) BUT Coverage is known (Non-NaN)\n",
     "    # Rationale: Likely a typo; use the mode provider to maintain data consistency.\n",
     "    condition_2 = df_imputed['Insurance Provider'].isna() & df_imputed['Insurance Coverage'].notna()\n",
+    "    print(f\" - Rows with Provider missing but Coverage known: {condition_2.sum()}\")\n",
     "    df_imputed.loc[condition_2, 'Insurance Provider'] = provider_mode\n",
     "\n",
     "    \n",
     "    # 3. SCENARIO: Provider is known (Non-NaN) BUT Coverage is missing (NaN)\n",
     "    # Rationale: Specific coverage amount was missed; use 0 as the safe imputation.\n",
     "    condition_3 = df_imputed['Insurance Provider'].notna() & df_imputed['Insurance Coverage'].isna()\n",
+    "    print(f\" - Rows with Provider known but Coverage missing: {condition_3.sum()}\")\n",
     "    df_imputed.loc[condition_3, 'Insurance Coverage'] = 0.0\n",
     "    \n",
     "    return df_imputed\n",
@@ -1024,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 946,
+   "execution_count": 1092,
    "id": "56fd3566",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 947,
+   "execution_count": 1093,
    "id": "00c1cd4c",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 948,
+   "execution_count": 1094,
    "id": "40564eb0",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 949,
+   "execution_count": 1095,
    "id": "74e72d8e",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 950,
+   "execution_count": 1096,
    "id": "27f7915a",
    "metadata": {},
    "outputs": [],
@@ -1163,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
+   "execution_count": 1097,
    "id": "33ecde2e",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 952,
+   "execution_count": 1098,
    "id": "71db2f98",
    "metadata": {},
    "outputs": [],
@@ -1214,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 953,
+   "execution_count": 1099,
    "id": "87aa14c2",
    "metadata": {},
    "outputs": [],
@@ -1225,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 954,
+   "execution_count": 1100,
    "id": "39ef9d67",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 955,
+   "execution_count": 1102,
    "id": "b181f391",
    "metadata": {},
    "outputs": [
@@ -1311,12 +1326,12 @@
    "id": "2fd5e354",
    "metadata": {},
    "source": [
-    "<h3 style = \"color : #3D737D;\"> Step 0: Variable Inference</h3>"
+    "<h3 style = \"color : #3D737D;\">Variable Inference</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 956,
+   "execution_count": 1103,
    "id": "6418ea60",
    "metadata": {},
    "outputs": [],
@@ -1326,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 957,
+   "execution_count": 1104,
    "id": "5004b9dc",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1520,7 @@
        "4          219.743794                 0.0            3  "
       ]
      },
-     "execution_count": 957,
+     "execution_count": 1104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 958,
+   "execution_count": 1105,
    "id": "71f129b3",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1549,7 @@
        "500"
       ]
      },
-     "execution_count": 958,
+     "execution_count": 1105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 959,
+   "execution_count": 1106,
    "id": "ee6d7e20",
    "metadata": {},
    "outputs": [],
@@ -1610,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 960,
+   "execution_count": 1107,
    "id": "217979aa",
    "metadata": {},
    "outputs": [
@@ -1803,7 +1818,7 @@
        "4       2024-01-01  "
       ]
      },
-     "execution_count": 960,
+     "execution_count": 1107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 961,
+   "execution_count": 1108,
    "id": "2a07f77e",
    "metadata": {},
    "outputs": [
@@ -1824,7 +1839,7 @@
        "(500, 17)"
       ]
      },
-     "execution_count": 961,
+     "execution_count": 1108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 962,
+   "execution_count": 1109,
    "id": "7fb72ac4",
    "metadata": {},
    "outputs": [
@@ -1884,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 963,
+   "execution_count": 1110,
    "id": "e828d4db",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2117,7 @@
        "4                   4.3  "
       ]
      },
-     "execution_count": 963,
+     "execution_count": 1110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 964,
+   "execution_count": 1111,
    "id": "04cc1a96",
    "metadata": {},
    "outputs": [],
@@ -2136,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 965,
+   "execution_count": 1112,
    "id": "a442fb9f",
    "metadata": {},
    "outputs": [
@@ -2397,7 +2412,7 @@
        "4               4               2               7  "
       ]
      },
-     "execution_count": 965,
+     "execution_count": 1112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2420,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 966,
+   "execution_count": 1113,
    "id": "91c2d8b6",
    "metadata": {},
    "outputs": [
@@ -2794,7 +2809,7 @@
        "4                       1                        0  "
       ]
      },
-     "execution_count": 966,
+     "execution_count": 1113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 967,
+   "execution_count": 1114,
    "id": "ab2af56c",
    "metadata": {},
    "outputs": [],
@@ -2819,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 968,
+   "execution_count": 1115,
    "id": "346b75eb",
    "metadata": {},
    "outputs": [],
@@ -2843,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 969,
+   "execution_count": 1116,
    "id": "d322a86e",
    "metadata": {},
    "outputs": [
@@ -2914,7 +2929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 970,
+   "execution_count": 1117,
    "id": "d31135ba",
    "metadata": {},
    "outputs": [],
@@ -2925,7 +2940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 971,
+   "execution_count": 1118,
    "id": "6de6a6da",
    "metadata": {},
    "outputs": [
@@ -2935,7 +2950,7 @@
        "Timestamp('2024-06-30 00:00:00')"
       ]
      },
-     "execution_count": 971,
+     "execution_count": 1118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2947,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 972,
+   "execution_count": 1119,
    "id": "043e77d5",
    "metadata": {},
    "outputs": [
@@ -2957,7 +2972,7 @@
        "Timestamp('2024-01-01 00:00:00')"
       ]
      },
-     "execution_count": 972,
+     "execution_count": 1119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2968,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 973,
+   "execution_count": 1120,
    "id": "2c423441",
    "metadata": {},
    "outputs": [
@@ -3119,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 974,
+   "execution_count": 1121,
    "id": "2939af67",
    "metadata": {},
    "outputs": [],
@@ -3129,7 +3144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 975,
+   "execution_count": 1122,
    "id": "478f133e",
    "metadata": {},
    "outputs": [
@@ -3167,7 +3182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 976,
+   "execution_count": 1123,
    "id": "97c5ee24",
    "metadata": {},
    "outputs": [
@@ -3185,7 +3200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 977,
+   "execution_count": 1124,
    "id": "c19d3df9",
    "metadata": {},
    "outputs": [
