Update G08 - Code.ipynb

--- a/G08 - Code.ipynb
+++ b/G08 - Code.ipynb
@@ -2964,7 +2964,7 @@
    "id": "7c4af0f2",
    "metadata": {},
    "source": [
-    "realmente aqui a relação n é muito clara mas ok "
+    "realmente aqui a relação n é muito clara mas ok k"
    ]
   }
  ],
